Actions
Bug #9939
closedsegfault by modifying array during Array#combination
Bug #9939:
segfault by modifying array during Array#combination
Actions
Added by nobu (Nobuyoshi Nakada) over 12 years ago. Updated about 12 years ago.
Applied in changeset r46418.
array.c: combination on a shared copy
r46417 and r46418 were backported into ruby_2_1 branch at r46808.
backported into ruby_2_0_0 at r47332.